# Sandbox

./: .gitignore  CMakeLists.txt  README.md
BuildingEscape/: .gitignore  README.md
BuildingEscape/BuildingEscape/: BuildingEscape.sln  BuildingEscape.uproject
BuildingEscape/BuildingEscape/Config/: DefaultGame.ini
BuildingEscape/BuildingEscape/Content/: DefaultPawn_BP.uasset  MyBuildingEscapeGameMode_BP.uasset  NewMap.umap  NewMap_BuiltData.uasset
BuildingEscape/BuildingEscape/Source/BuildingEscape/: Grabber.cpp  Grabber.h  OpenDoor.cpp  OpenDoor.h  PositionReporter.cpp  PositionReporterRock.cpp  PositionReporterRock.h
GroundUp/: .gitignore  CMakeCache.txt  Makefile  README.md  cmake_install.cmake
GroundUp/Madhav/: README.md
GroundUp/Madhav/GroundUp_SDL2/: GroundUp_SDL2.sln
GroundUp/glnx_X/: CMakeLists.txt  build.sh  run.sh
GroundUp/glnx_X/src/: Makefile  cmake_install.cmake
GroundUp/shared/: CMakeLists.txt  Makefile  cmake_install.cmake  mainApp
GroundUp/win32/src/: functions.c  mainApp.c
OpenGl_3Plus/: build.sh  main.cpp
Rendering/: monkey.blend  monkey.blend1
Rendering/Blender/: monkey.blend
Rendering/Project/: Project.uproject
Rendering/RenderTargets/: RenderTargets.uproject
Win32DirectSound/: FileReader.cpp  FileReader.h  MainWindowCallback.h  MessageHandling.h  Sound.h  Win32DirectSound.sln  Win32DirectSound.vcxproj  Win32DirectSound.vcxproj.filters  Win32DirectSound_ParamInput.txt  winmain.cpp
glnx_X/: CMakeLists.txt
glnx_X/src/: CMakeLists.txt  functions.c
shared/: CMakeLists.txt  functions.h
src/: functions.c  mainApp.c
(+19 files in other folders)
